--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
 <a href="#dergomesazh" data-role="button" data-inline="true" data-mini="true" data-icon="mail" data-iconpos="notext"></a>
 </div>
 <!-- content -->
-<div data-role="none">
+<div data-role="none" class="app">
     <img src="images/pendimi-logo.png" style="width: 210px; margin-right:auto; margin-left:auto;display: block;padding-top: 30px;"/>
     <!-- AUDIO PLAYER -->
     <p style="text-align:center; display:block">
@@ -186,7 +186,7 @@
 <!-- footer navbar -->
     <div data-role="navbar" style="border-bottom:6px solid #2f4c73">
     	<ul>
-			<li><a href="#home" data-icon="audio" data-iconpos="top" data-transition="none">Kanali 1</a></li>
+	    <li><a href="#home" data-icon="audio" data-iconpos="top" data-transition="none">Kanali 1</a></li>
             <li><a href="#kanali-2" data-icon="audio" data-iconpos="top" data-transition="none">Kanali 2</a></li>
             <li><a href="#fb-wall" data-icon="bullets" data-iconpos="top" data-transition="none">Lajme</a></li>
             <li><a href="#info" data-icon="info" data-iconpos="top" data-transition="none">Info</a></li>
