--- a/www/index.html
+++ b/www/index.html
@@ -201,8 +201,8 @@
     <script type="text/javascript">
         app.initialize();
     </script>
-    <!-- <script src="js/jquery.ibacor-fb-streaming.min.js"></script>-->
-    <!-- <script src="js/index.js"></script>-->
+    <script src="js/jquery.ibacor-fb-streaming.min.js"></script>
+    <script src="js/index.js"></script>
     
 </body>
 </html>
