--- a/www/index.html
+++ b/www/index.html
@@ -34,18 +34,18 @@
 </div>
 -->
 <!-- content -->
-<div data-role="none" class="app">
-    <img src="images/pendimi-logo.png" style="width: 60%; margin-right:auto; margin-left:auto;display: block;padding-top: 30px;"/>
+<div data-role="none">
+    <img src="images/pendimi-logo.png" style="width: 70%; margin-right:auto; margin-left:auto;display: block;padding-top: 30px;"/>
     <!-- AUDIO PLAYER -->
     <p style="text-align:center; display:block">
         <span>Kanali 1 - Jeni duke ndëgjuar:</span> <br/>  
-        <span><iframe src="http://radio-pendimi.com/kanal-1-status.php" style="border:none; height:30px; width:100%"></iframe>
+        <span><iframe src="http://radio-pendimi.com/kanal-1-status.php" style="border:none; height:55px; width:100%; margin: auto auto; display:block"></iframe>
     </p>
 <audio src="http://radio-pendimi.com:8000/;$type=mp3" id="player"></audio>
 <div style="text-align:center; width: 100%; display: flex;"> <!-- Player controls start -->
     <span onclick="document.getElementById('player').play()" class="btn_control" style="margin-left:15px;"> PLAY</span>
     <span onclick="document.getElementById('player').pause()" class="btn_control"> STOP</span>
-    <span onclick="document.getElementById('player').muted=!document.getElementById('player').muted" class="btn_control" style="margin-right:15px;"> MUTE/UNMUTE</span>
+<!--    <span onclick="document.getElementById('player').muted=!document.getElementById('player').muted" class="btn_control" style="margin-right:15px;"> MUTE/UNMUTE</span> -->
     </div> <!-- Player controls end -->
 	
      <!-- Rubrikat kontaktuese -->
@@ -114,12 +114,12 @@
 
 <!-- content -->
 <div data-role="none">
-     <img src="images/pendimi-logo.png" style="width: 60%; margin-right:auto; margin-left:auto;display: block;padding-top: 30px;"/>
+     <img src="images/pendimi-logo.png" style="width: 70%; margin-right:auto; margin-left:auto;display: block;padding-top: 30px;"/>
 <audio src="http://radio-pendimi.com:8002/;$type=mp3" id="player-2"></audio>
 <div style="text-align:center; width: 100%; display: flex;">
     <span onclick="document.getElementById('player-2').play()" class="btn_control" style="margin-left:15px"> PLAY</span>
     <span onclick="document.getElementById('player-2').pause()" class="btn_control"> STOP</span>
-    <span onclick="document.getElementById('player-2').muted=!document.getElementById('player-2').muted" class="btn_control" style="margin-right:15px"> MUTE/UNMUTE</span>
+    <!-- <span onclick="document.getElementById('player-2').muted=!document.getElementById('player-2').muted" class="btn_control" style="margin-right:15px"> MUTE/UNMUTE</span> -->
 </div>
 <p style="text-align:center; display:block">
         <span>Kanali 2 - Jeni duke ndëgjuar:</span> <br/>  
