--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
 </div>
 -->
 <!-- content -->
-<div data-role="none">
+<div data-role="none" class="app">
     <img src="images/pendimi-logo.png" style="width: 70%; margin-right:auto; margin-left:auto;display: block;padding-top: 30px;"/>
     <!-- AUDIO PLAYER -->
     <p style="text-align:center; display:block">
