--- a/www/index.html
+++ b/www/index.html
@@ -67,7 +67,7 @@
     </div>
     <br>
     <div style="background: url('images/equalizer.png'); background-size:100%">
-        <img id="cc_strinfo_trackimageurl_kanali1" class="cc_streaminfo logo pulse" style="width: 50%; background: #fff; margin: 20px auto; padding: 5px; display:block; min-height:170px; min-width:170px;"/>
+        <img id="cc_strinfo_trackimageurl_kanali1" class="cc_streaminfo logo" style="width: 50%; background: #fff; margin: 20px auto; padding: 5px; display:block; min-height:170px; min-width:170px;"/>
     </div>
     
     <!-- AUDIO PLAYER -->
@@ -140,7 +140,7 @@
     </div>
     <br>
     <div style="background: url('images/equalizer.png'); background-size:100%">
-        <img id="cc_strinfo_trackimageurl_kanali2" class="cc_streaminfo logo pulse" style="width: 50%; background: #fff; margin: 20px auto; padding: 5px; min-height:170px; min-width:170px; display:block;"/>
+        <img id="cc_strinfo_trackimageurl_kanali2" class="cc_streaminfo logo" style="width: 50%; background: #fff; margin: 20px auto; padding: 5px; min-height:170px; min-width:170px; display:block;"/>
     </div>
     
     <!-- AUDIO PLAYER -->
@@ -204,7 +204,7 @@
             <span>Info</span>
         </div>
     </div>
- <img src="images/pendimi.png"  class="logo pulse"/>
+ <img src="images/pendimi.png"  class="logo"/>
     <p align="center">
       <a href="mailto:info@radio-pendimi.com" style="text-decoration:none; text-shadow:none; color: #fff;font-weight: 500;font-size: 20px; font-family: Dosis;">info@radio-pendimi.com </a><br>
       <a href="http://radio-pendimi.com" style="text-decoration: none; text-shadow:none; color: #fff; font-weight: 500; font-size: 20px; font-family: Dosis;">http://radio-pendimi.com </a><br>
