--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
 <div data-role="page" id="home" data-theme="b" style="min-height:100%;/*background: radial-gradient(circle, #9a4d61, #4b3a48);*/">
 
 <!-- MENU Panel -->
-  <div id="Menu1" data-role="panel" data-display="push"  style="background: linear-gradient(to bottom, #9a4d61, #4b3a48); border-right:solid 1px rgba(255,255,255,0.5);">
+  <div id="Menu1" data-role="panel" data-display="push" class="paneli">
   	<div class="logo">
 		<img src="images/pendimi.png" style="border:none;width: 100%;display: block;margin: 0px auto;"> 
 	</div>	
@@ -102,7 +102,7 @@
 <div data-role="page" id="kanali-2" data-theme="b" style="min-height:100%;/*background: radial-gradient(circle, #9a4d61, #4b3a48);*/">
 
 <!-- MENU Panel -->
-  <div id="Menu2" data-role="panel" data-display="push"  style="background: linear-gradient(to bottom, #9a4d61, #4b3a48); border-right:solid 1px rgba(255,255,255,0.5);">
+  <div id="Menu2" data-role="panel" data-display="push" class="paneli">
   	<div class="logo">
 		<img src="images/pendimi.png" style="border:none;width: 100%;display: block;margin: 0px auto;"> 
 	</div>	
@@ -173,7 +173,7 @@
 <!-- Informacione -->
 <div data-role="page" id="info" data-theme="b" style="min-height:100%;/*background: radial-gradient(circle, #9a4d61, #4b3a48);*/">
 <!-- MENU Panel -->
-  <div id="Menu3" data-role="panel" data-display="push"  style="background: linear-gradient(to bottom, #9a4d61, #4b3a48); border-right:solid 1px rgba(255,255,255,0.5);">
+  <div id="Menu3" data-role="panel" data-display="push"  class="paneli">
   	<div class="logo">
 		<img src="images/pendimi.png" style="border:none;width: 100%;display: block;margin: 0px auto;"> 
 	</div>	
@@ -219,7 +219,7 @@
 <!-- Takvim -->
 <div data-role="page" id="takvim" data-theme="b" style="min-height:100%;/*background: radial-gradient(circle, #9a4d61, #4b3a48);*/">
 <!-- MENU Panel -->
-  <div id="Menu4" data-role="panel" data-display="push"  style="background: linear-gradient(to bottom, #9a4d61, #4b3a48); border-right:solid 1px rgba(255,255,255,0.5);">
+  <div id="Menu4" data-role="panel" data-display="push"  class="paneli">
   	<div class="logo">
 		<img src="images/pendimi.png" style="border:none;width: 100%;display: block;margin: 0px auto;"> 
 	</div>	
@@ -267,7 +267,7 @@
 <!-- Transmetime -->
 <div data-role="page" id="transmetime" data-theme="b" style="min-height:100%;/*background: radial-gradient(circle, #9a4d61, #4b3a48);*/">
 <!-- MENU Panel -->
-  <div id="Menu7" data-role="panel" data-display="push"  style="background: linear-gradient(to bottom, #9a4d61, #4b3a48); border-right:solid 1px rgba(255,255,255,0.5);">
+  <div id="Menu7" data-role="panel" data-display="push"  class="paneli">
   	<div class="logo">
 		<img src="images/pendimi.png" style="border:none;width: 100%;display: block;margin: 0px auto;"> 
 	</div>	
@@ -313,7 +313,7 @@
 <div data-role="page" id="dergomesazh" data-theme="b" style="min-height:100%;/*background: radial-gradient(circle, #9a4d61, #4b3a48);*/">
 
     <!-- MENU Panel -->
-  <div id="Menu5" data-role="panel" data-display="push"  style="background: linear-gradient(to bottom, #9a4d61, #4b3a48); border-right:solid 1px rgba(255,255,255,0.5);">
+  <div id="Menu5" data-role="panel" data-display="push"  class="paneli">
   	<div class="logo">
 		<img src="images/pendimi.png" style="border:none;width: 100%;display: block;margin: 0px auto;"> 
 	</div>	
@@ -373,7 +373,7 @@
 <!-- Facebook wall -->
 <div data-role="page" id="fb-wall" data-theme="b" style="min-height:100%;/*background: radial-gradient(circle, #9a4d61, #4b3a48);*/">
  <!-- MENU Panel -->
-  <div id="Menu6" data-role="panel" data-display="push"  style="background: linear-gradient(to bottom, #9a4d61, #4b3a48); border-right:solid 1px rgba(255,255,255,0.5);">
+  <div id="Menu6" data-role="panel" data-display="push"  class="paneli">
   	<div class="logo">
 		<img src="images/pendimi.png" style="border:none;width: 100%;display: block;margin: 0px auto;"> 
 	</div>	
