--- a/www/index.html
+++ b/www/index.html
@@ -77,12 +77,8 @@
 			<span id="cc_strinfo_song_kanali1" class="cc_streaminfo"></span><br>
 			<!-- <div id="cc_recenttracks_kanali1" class="cc_recenttracks_list">Loading ...</div><br> -->
 	</div>
-	<div id="player" >
-<<<<<<< HEAD
+	<div id="player"
 		<audio src="http://85.93.88.146:8000/;$type=mp3" id="player-1" preload="metadata"></audio>
-=======
-		<audio src="http://217.172.180.29:8004/;$type=mp3" id="player-1" preload="metadata"></audio>
->>>>>>> origin/master
 		<div style="margin:15px auto 35px"> <!-- Player controls start -->
 			<span onclick="document.getElementById('player-1').play()" class="btn_controli"> <i class="fa fa-play fa-3x"></i></span>
 			<span onclick="document.getElementById('player-1').pause()" class="btn_controli"> <i class="fa fa-stop fa-3x"></i></span>
