--- a/www/index.html
+++ b/www/index.html
@@ -77,13 +77,14 @@
 			<span id="cc_strinfo_song_kanali1" class="cc_streaminfo"></span><br>
 			<!-- <div id="cc_recenttracks_kanali1" class="cc_recenttracks_list">Loading ...</div><br> -->
 	</div>
-	<div id="player"
+	<div id="player" >
 		<audio src="http://85.93.88.146:8004/;$type=mp3" id="player-1" preload="metadata"></audio>
 		<div style="margin:15px auto 35px"> <!-- Player controls start -->
 			<span onclick="document.getElementById('player-1').play()" class="btn_controli"> <i class="fa fa-play fa-3x"></i></span>
 			<span onclick="document.getElementById('player-1').pause()" class="btn_controli"> <i class="fa fa-stop fa-3x"></i></span>
 		</div> <!-- Player controls end -->
     </div>
+	
     <!-- Nderrimi i kanaleve -->
     <div style="text-align:center; margin: 25px auto">
         <a href="#home" style="text-decoration:none"><span class="butonat"><i class="fa fa-microphone fa-lg"></i> Kanali 1</span></a>
