--- a/www/index.html
+++ b/www/index.html
@@ -67,14 +67,14 @@
     </div>
     <br>
     <div style="background: url('images/equalizer.png'); background-size:100%">
-        <img id="cc_strinfo_trackimageurl_kanali1" class="cc_streaminfo logo" style="width: 50%; background: #fff; margin: 20px auto; padding: 5px; display:block; min-height:170px; min-width:170px;"/>
+        <img id="cc_strinfo_trackimageurl_kanali1_main" class="cc_streaminfo logo" style="width: 50%; background: #fff; margin: 20px auto; padding: 5px; display:block; min-height:170px; min-width:170px;"/>
     </div>
     
     <!-- AUDIO PLAYER -->
     <div id="status-titulli"> 
         <span style="background:#6d4253; padding:8px; border-radius:8px"><i class="fa fa-signal fa-lg"></i>  Jeni duke dëgjuar:  <i class="fa fa-signal fa-lg fa-flip-horizontal"></i></span> 
         <br><br>
-			<span id="cc_strinfo_song_kanali1" class="cc_streaminfo"></span><br>
+			<span id="cc_strinfo_song_kanali1_main" class="cc_streaminfo"></span><br>
 			<!-- <div id="cc_recenttracks_kanali1" class="cc_recenttracks_list">Loading ...</div><br> -->
 	</div>
 	<div id="player" >
@@ -140,18 +140,18 @@
     </div>
     <br>
     <div style="background: url('images/equalizer.png'); background-size:100%">
-        <img id="cc_strinfo_trackimageurl_kanali2" class="cc_streaminfo logo" style="width: 50%; background: #fff; margin: 20px auto; padding: 5px; min-height:170px; min-width:170px; display:block;"/>
+        <img id="cc_strinfo_trackimageurl_kanali2_main" class="cc_streaminfo logo" style="width: 50%; background: #fff; margin: 20px auto; padding: 5px; min-height:170px; min-width:170px; display:block;"/>
     </div>
     
     <!-- AUDIO PLAYER -->
     <div id="status-titulli"> 
         <span style="background:#6d4253; padding:8px; border-radius:8px"><i class="fa fa-signal fa-lg"></i>  Jeni duke dëgjuar:  <i class="fa fa-signal fa-lg fa-flip-horizontal"></i></span> 
         <br><br>
-			<span id="cc_strinfo_song_kanali2" class="cc_streaminfo"></span><br>
+			<span id="cc_strinfo_song_kanali2_main" class="cc_streaminfo"></span><br>
 			<!-- <div id="cc_recenttracks_kanali1" class="cc_recenttracks_list">Loading ...</div><br> -->
 	</div>
 	<div id="player" >
-		<audio src="http://85.93.88.146:8002/;$type=mp3" id="player-2" preload="metadata"></audio>
+		<audio src="http://85.93.88.146:8008/;$type=mp3" id="player-2" preload="metadata"></audio>
 		<div style="margin:15px auto 35px"> <!-- Player controls start -->
 			<span onclick="document.getElementById('player-2').play()" class="btn_controli"> <i class="fa fa-play fa-3x"></i></span>
 			<span onclick="document.getElementById('player-2').pause()" class="btn_controli"> <i class="fa fa-stop fa-3x"></i></span>
